# Andromeda

./: .clang-format  .gitignore  .gitmodules  Andromeda.smproj  Asset Formats.md  Asset Formats.txt  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  Roadmap.md
codegen/: CMakeLists.txt
codegen/include/codegen/: generate.hpp  parse.hpp
codegen/include/public/reflect/: reflection.hpp
codegen/src/: generate.cpp  main.cpp  parse.cpp
codegen/templates/: component_reflect_decl_hpp.tpl  dispatch_hpp.tpl  reflection_cpp.tpl  type_lists_hpp.tpl
include/andromeda/: world.hpp
include/andromeda/app/: application.hpp  log.hpp  wsi.hpp
include/andromeda/assets/: assets.hpp  env_map.hpp  loaders.hpp  material.hpp  mesh.hpp  texture.hpp
include/andromeda/assets/importers/: importers.hpp  png.hpp
include/andromeda/components/: camera.hpp  dbg_quad.hpp  directional_light.hpp  environment.hpp  hierarchy.hpp  mesh_renderer.hpp  name.hpp  point_light.hpp  postprocessing.hpp  static_mesh.hpp  transform.hpp
include/andromeda/core/: context.hpp  env_map_loader.hpp  mipmap_gen.hpp  task_manager.hpp
include/andromeda/ecs/: component_id.hpp  component_storage.hpp  component_storage_base.hpp  component_view.hpp  entity.hpp  registry.hpp
include/andromeda/editor/: command_parser.hpp  console.hpp  editor.hpp  inspector.hpp  performance.hpp  scene_viewport.hpp  style.hpp
include/andromeda/editor/widgets/: dockspace.hpp  dropdown.hpp  floating_panel.hpp  image.hpp  input_text.hpp  menu_bar.hpp  table.hpp  tooltip.hpp
include/andromeda/graphics/: context.hpp  environment.hpp  forward.hpp  imgui.hpp  imgui_impl_glfw.hpp  material.hpp  mesh.hpp  performance_counters.hpp  renderer.hpp  scene_description.hpp  texture.hpp  viewport.hpp
include/andromeda/graphics/backend/: atmosphere.hpp  csm.hpp  debug_geometry.hpp  depth_pass.hpp  forward_plus.hpp  mesh_draw.hpp  renderer_backend.hpp  rtx.hpp  simple.hpp  skybox.hpp  tonemap.hpp
include/andromeda/math/: transform.hpp
include/andromeda/renderer/: geometry_pass.hpp  lighting_pass.hpp  render_database.hpp  renderer.hpp  skybox_pass.hpp  tonemap_pass.hpp  util.hpp
include/andromeda/renderer/deferred/: geometry_pass.hpp  lighting_pass.hpp  skybox_pass.hpp  tonemap_pass.hpp
include/andromeda/thread/: locked_value.hpp  scheduler.hpp
include/andromeda/util/: handle.hpp  idgen.hpp  log.hpp  math.hpp  memory.hpp  sparse_set.hpp  string_ops.hpp  types.hpp  version.hpp  vk_forward.hpp
include/andromeda/world/: world.hpp
include/andromeda/wsi/: application.hpp  window.hpp
shaders/: CMakeLists.txt  ambient.frag  ambient.vert  atmosphere.frag  atmosphere.vert  debug_draw.frag  debug_draw.vert  depth.frag  depth.vert  equirect_to_cubemap.comp  fullscreen.frag  fullscreen.vert  fwd_plus_depth.vert  fwd_plus_light_cull.comp  fwd_plus_shading.frag  fwd_plus_shading.vert  generic.frag  generic.vert  geometry.frag  geometry.vert  imgui.frag  imgui.vert  irradiance_convolution.comp  light_cull.comp  light_heatmap_overlay.frag  lighting.frag  lighting.vert  luminance_accumulate.comp  luminance_average.comp  overlay.vert  prefilter_specular_map.comp  shading.frag  shading.vert  shadow.vert  simple.frag  simple.vert  sky_view.comp  skybox.frag  skybox.vert  tonemap.frag  (+2 more)
shaders/include/glsl/: common.glsl  inputs.glsl  limits.glsl  types.glsl
src/: CMakeLists.txt  main.cpp  world.cpp
src/app/: application.cpp  log.cpp  wsi.cpp
src/assets/: assets.cpp  entity_loader.cpp  environment_loader.cpp  material_loader.cpp  mesh_loader.cpp  texture_loader.cpp
src/assets/importers/: importers.cpp  png.cpp  stb_image.cpp
src/core/: context.cpp  env_map_loader.cpp  mipmap_gen.cpp  task_manager.cpp
src/ecs/: registry.cpp
src/editor/: command_parser.cpp  console.cpp  editor.cpp  inspector.cpp  performance.cpp  scene_viewport.cpp  style.cpp
src/editor/widgets/: dockspace.cpp  floating_panel.cpp  image.cpp  input_text.cpp  menu_bar.cpp  table.cpp  tooltip.cpp
src/graphics/: context.cpp  imgui_impl.cpp  imgui_impl_glfw.cpp  performance_counters.cpp  renderer.cpp  scene_description.cpp
src/graphics/backend/: atmosphere.cpp  csm.cpp  debug_geometry.cpp  depth_pass.cpp  forward_plus.cpp  mesh_draw.cpp  rtx.cpp  simple.cpp  skybox.cpp  tonemap.cpp
src/math/: transform.cpp
src/renderer/: geometry_pass.cpp  lighting_pass.cpp  render_database.cpp  renderer.cpp  skybox_pass.cpp  tonemap_pass.cpp  util.cpp
src/renderer/deferred/: deferred_renderer.cpp  geometry_pass.cpp  lighting_pass.cpp  skybox_pass.cpp  tonemap_pass.cpp
src/renderer/forward_plus/: forward_plus_renderer.cpp
src/thread/: scheduler.cpp
src/util/: log.cpp  string_ops.cpp
src/world/: world.cpp
src/wsi/: application.cpp  window.cpp
